# furnace

./: README.md
charge_pump_simulation/: .gitignore  charge_pump_simulation.kicad_sch  charge_pump_simulation.wbk
furnace_230V.pretty/: KF7.62-2P.kicad_mod  TRIAC.kicad_mod  ZMCT103C.kicad_mod
furnace_230V_FW/: .gitignore  Cargo.toml  Makefile  README.md  clean.py  readme.md
furnace_230V_FW/c_src/: app.c  app_polluted.c  app_polluted.h  defines.h  main.c
furnace_230V_FW/c_target/: furnace_230v.ihx
furnace_230V_FW/src/: bsp.rs  crc.rs  ds18b20.rs  filter.rs  lib.rs  utils.rs
furnace_230V_HW/: +3V3_isolated.kicad_sch  +3V3_isolated.sch-bak  AC-DC 5V.kicad_sch  AC-DC 5V.sch  B0505S-1WR2.lib  Current_sensor.kicad_sch  Isolated_TRIAC--.sch  Isolated_TRIAC.kicad_sch  Isolated_TRIAC.sch  MCU.kicad_sch  MCU.sch  MCU.sch-bak  Optoisolator.kicad_sch  README.md  Temp_sensor.kicad_sch  Temp_sensor.sch-bak  Voltage_divider.kicad_sch  Voltage_divider.sch  Voltage_divider.sch-bak  ac-dc.bck  fp-info-cache  fp-lib-table  furnace_230V-cache.lib  furnace_230V.kicad_pcb  furnace_230V.kicad_pro  furnace_230V.kicad_sch  furnace_230V.sch-bak  sym-lib-table
furnace_controller_FW/: Cargo.toml  Embed.toml
furnace_controller_FW/src/: bsp.rs  keyboard.rs  lib.rs  main.rs  safe_panic.rs  utils.rs
furnace_controller_HW/: +3V3_isolated.kicad_sch  .gitignore  ADUM1301ARWZ-RL.lib  Buzzer.kicad_sch  I2C_display_connector.kicad_sch  I2C_display_connector.sch  Isolated_temp_sensor.kicad_sch  Isolated_temp_sensor.sch  Isolator.kicad_sch  Isolator.sch-bak  Keyboard_connector.kicad_sch  (+22 more)
(+103 files in other folders)
