[package]
name = "furnace_controller"
version = "0.1.0"
authors = ["yuri volkov <volkov.yuri.alex@gmail.com>"]
edition = "2021"

[dependencies]
cortex-m = {version = "0.7.7", features = ["critical-section-single-core"]}
crc = "3.4.0"
display-interface-i2c = "0.4.0"
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
format_no_std = "1.2.0"
heapless = "0.9.2"
max31855 = "0.1.0"
micromath = "2.1.0"
# panic-rtt-target = {version = "0.2.0"}
rtic = {version = "2.2.0", features = ["thumbv7-backend"]}
rtic-monotonics = {version = "2.1.0", features = ["cortex-m-systick"]}
rtic-sync = "1.4.0"
rtt-target = "0.6.2"
ssd1309 = "0.4.0"
stm32f1xx-hal = {version = "0.11.0", features = ["stm32f103", "medium"]}
u8g2-fonts = "0.7.2"

[dev-dependencies]
pretty_assertions = "1.4.1"

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
opt-level = "s"
